updte测试工程配置测试通过

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -15,7 +15,8 @@
     "sourceMap": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@ui/*": ["../src/*"]
     },
     "plugins": [
       {
